syntax = "proto3";

package ws;

option go_package = "fish-game/ws;ws";

message WSMessage {
  string event = 1;
  bytes data = 2;
}

message ShootRequest {
  int32 bullet_id = 1;
  float x = 2;
  float y = 3;
}

message FishGenerate {
  int32 id = 1;
  float x = 2;
  float y = 3;
}

message FishKilled {
  int32 fish_id = 1;
  int32 by_user_id = 2;
}

message CoinUpdate {
  int32 user_id = 1;
  int32 coins = 2;
}

message GoldUpdate {
  string user_id = 1;
  int32 gold = 2;
}

message FishPosition {
  int32 id = 1;
  float x = 2;
  float y = 3;
}

message FishPositionUpdate {
  repeated FishPosition positions = 1;
}

message UseSkillRequest {
  string user_id = 1;
  string skill_type = 2; // 如：freeze
}

message SkillUsed {
  string user_id = 1;
  string skill_type = 2;
}

message FishFreeze {
  int32 duration_ms = 1; // 冻结持续时间（毫秒）
}

